# pybudget

./: .gitignore  README.md  pyproject.toml
src/pybudget/: __init__.py  apply.py  categorize.py  csv_tools.py  database.py  filtering.py  init.py  main.py  merge.py  normalize.py  pybudget.py  report.py  split.py  suggestions.py  transactions.py  types.py  util.py  utils.py
tests/pybudget/: conftest.py  test_csv_tools.py  test_main.py
