[project]
name = "pybudget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "ruff>=0.11.0",
]

[project.scripts]
pybudget = "pybudget.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

