[project]
name = "pybudget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "tinydb==4.8.2",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]

[project.scripts]
pybudget = "pybudget.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src/pybudget --cov-report=html"
testpaths = ["tests"]

[tool.ruff]
# Same as Black
line-length = 88
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

